feat(elevenlabs): smart voice routing with multi-phase execution
Implement deterministic voice design→save→TTS chaining for ElevenLabs,
with artifact metadata for voice ID propagation and a new ArtifactResolver
for path-based artifact reference resolution (@name.metadata.voiceId).

Key changes:
- ExtractedOutput record: extractOutputs now returns content + metadata
- ExecutionPhase interface in AbstractModelExecutor: multi-step flows
  with per-phase retry (replaces single doExecute call)
- ArtifactResolver: tree-walking JSON resolver for @name, @name.url,
  @name.metadata.field patterns (extracted from GenerateCreativeTool)
- ElevenLabsModelExecutor: buildExecutionPhases with strategy derivation
  (direct TTS / design→save→TTS / design→save-all)
- ElevenLabsClient: saveVoice, searchVoices, all 3 previews, voice
  settings defaults, eleven_ttv_v3 for voice design
- elevenlabs.json: v3→tts rename, voice-design declares 3 AUDIO outputs
- GenerateCreativeTool: uses ArtifactResolver, mergeMetadata preserves
  executor-provided fields (voiceId) alongside generation_details
- Decomposer prompt: proactive artifact lookup for named entities
- All 8 executors updated for List<ExtractedOutput> signature

https://claude.ai/code/session_01SMC6okmAUNU5uvREcA6aK2